Unit tests for previous commit.
(cherry picked from commit 16393fb1548224a37f034170dc65ce5bdc210e7b)

--- a/test/unit/fixtures/dom.html
+++ b/test/unit/fixtures/dom.html
@@ -275,3 +275,4 @@
 </div>
 
 <div id='elementToViewportDimensions' style='display: none'></div>
+<div id="auto_dimensions" style="height:auto"></div>
