Fix issue where setting type attribute for button element in Element constructor fails in IE.

--- a/test/unit/fixtures/dom.html
+++ b/test/unit/fixtures/dom.html
@@ -157,6 +157,7 @@
   <input type="checkbox" id="attributes_with_issues_checked" name="a" checked="checked"/>
   <input type="checkbox" id="attributes_with_issues_disabled" name="b" checked="checked" disabled="disabled"/>
   <input type="text" id="attributes_with_issues_readonly" name="c" readonly="readonly" value="blech"/>
+  <input type="text" id="attributes_with_issues_regular"  name="d" value="0"/>
   <input type="date" id="attributes_with_issues_type" value="blech" />
   <select id="attributes_with_issues_multiple" name="e" multiple="multiple">
     <option>blech</option>
