Updated unit tests.

--- a/test/unit/fixtures/dom.html
+++ b/test/unit/fixtures/dom.html
@@ -54,7 +54,7 @@
 </div>
 
 <div id="testdiv">to be updated</div>
-<div id="testdiv-replace-container-1"><div id="testdiv-replace-1"></div></div>
+<div id="testdiv-replace-container-1"><div id="testdiv-replace-1">original text</div></div>
 <div id="testdiv-replace-container-2"><div id="testdiv-replace-2"></div></div>
 <div id="testdiv-replace-container-3"><div id="testdiv-replace-3"></div></div>
 <div id="testdiv-replace-container-4"><div id="testdiv-replace-4"></div></div>
@@ -283,3 +283,8 @@
 
 <div id='elementToViewportDimensions' style='display: none'></div>
 <div id="auto_dimensions" style="height:auto"></div>
+
+<iframe src="" id="dummy_iframe"></iframe>
+
+<div id='clonePositionSource'></div>
+<div id='clonePositionTarget'></div>
